before final test
